--- a/templates/login.html
+++ b/templates/login.html
@@ -30,12 +30,22 @@
 						<p>{{.member.Id}} 님 환영 합니다!</p>
 					</div>
 					{{else}}
-					<a href="/login">
-						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
-					</a>
-					<a href="/register">
-						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">회원가입</button>
-					</a>
+					<div class="panel-body">
+						<form class="form" id="login-form" action="/login" method="POST">
+							<div class="form-group mb-4">
+								<input type="text" class="form-control form-control-lg" id="id" name="id" placeholder="아이디" autofocus>
+							</div>
+							<div class="form-group mb-4">
+								<input type="password" class="form-control form-control-lg" id="password" name="password" placeholder="비밀번호">
+							</div>
+							<div>
+								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
+							</div>
+                            <div class="text-center pt-0 mb-5 pb-0">
+                                <a href="#!">비밀번호를 잊어버리셨나요?</a>
+                            </div>
+						</form>
+					</div>
 					{{end}}
 				</div>
 			</div>
