--- a/templates/common/404.html
+++ b/templates/common/404.html
@@ -1,3 +1,4 @@
+{{ define "common/404.html" }}
 <!DOCTYPE html>
 <html lang="ko"><head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -24,19 +25,10 @@
 				<div class="panel panel-success">
 					<div class="panel-heading">
 						<h3 class="mb-5">{{.title}}</h3>
+                    </div>
+                    <div>
+						<p>오류 메세지 : {{.message}}</p>
 					</div>
-					{{if .member}}
-					<div>
-						<p>{{.member.Id}} 님 환영 합니다!</p>
-					</div>
-					{{else}}
-					<a href="/login">
-						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
-					</a>
-					<a href="/register">
-						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">회원가입</button>
-					</a>
-					{{end}}
 				</div>
 			</div>
 		</div>
@@ -44,3 +36,4 @@
 </div>
 </body>
 </html>
+{{ end }}
