--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,3 +1,4 @@
+{{ define "home/index.html" }}
 <!DOCTYPE html>
 <html lang="ko"><head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -24,10 +25,19 @@
 				<div class="panel panel-success">
 					<div class="panel-heading">
 						<h3 class="mb-5">{{.title}}</h3>
-                    </div>
-                    <div>
-						<p>오류 메세지 : {{.message}}</p>
 					</div>
+					{{if .member}}
+					<div>
+						<p>{{.member.Id}} 님 환영 합니다!</p>
+					</div>
+					{{else}}
+					<a href="/member/login">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
+					</a>
+					<a href="/member/register">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">회원가입</button>
+					</a>
+					{{end}}
 				</div>
 			</div>
 		</div>
@@ -35,3 +45,4 @@
 </div>
 </body>
 </html>
+{{ end }}
