--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -1,3 +1,4 @@
+{{ define "member/login.html" }}
 <!DOCTYPE html>
 <html lang="ko"><head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -31,7 +32,7 @@
 					</div>
 					{{else}}
 					<div class="panel-body">
-						<form class="form" id="login-form" action="/login" method="POST">
+						<form class="form" id="login-form" action="login" method="POST">
 							<div class="form-group mb-4">
 								<input type="text" class="form-control form-control-lg" id="id" name="id" placeholder="아이디" autofocus>
 							</div>
@@ -54,3 +55,4 @@
 </div>
 </body>
 </html>
+{{ end }}
