게시글 리스트 로직 추가

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -37,6 +37,9 @@
 					<a href="/member/register">
 						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">회원가입</button>
 					</a>
+					<a href="/post/list">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">글 목록</button>
+					</a>
 					{{end}}
 				</div>
 			</div>
