--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -37,7 +37,7 @@
                     {{ range .posts }}
                     <tr>
                         <td style="width: 60%">
-                            <a class="text-reset" href="#">{{ .Title }}</a>
+                            <a class="text-reset" href="{{ .Id }}">{{ .Title }}</a>
                         </td>
                         <td style="width: 10%" class="text-center">{{ .Writer }}</td>
                         <td style="width: 20%" class="text-center">{{ .RegisterDate }}</td>
@@ -47,7 +47,7 @@
                 </tbody>
             </table>
             <div>
-                <a href='#' onClick='fn_write()' class="btn btn-success">글쓰기</a>
+                <a href="/post/register" class="btn btn-success">글쓰기</a>
             </div>
         </form>
     </div>
