사용자 인증 토큰 로직 추가

--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -48,6 +48,10 @@
 							</div>
 						</form>
 					</div>
+
+					<div>
+						<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">삭제 하기</button>
+					</div>
 					{{end}}
 				</div>
 			</div>
