--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -30,6 +30,15 @@
 					<div>
 						<p>{{.member.Id}} 님 환영 합니다!</p>
 					</div>
+					{{end}}
+						
+					{{if .login}}
+					<a href="/member/logout">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그아웃</button>
+					</a>			
+					<a href="/member/modify">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">회원정보 변경</button>
+					</a>
 					{{else}}
 					<a href="/member/login">
 						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
@@ -37,10 +46,10 @@
 					<a href="/member/register">
 						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">회원가입</button>
 					</a>
+					{{end}}
 					<a href="/post/list">
 						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">글 목록</button>
 					</a>
-					{{end}}
 				</div>
 			</div>
 		</div>
