--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -41,14 +41,16 @@
                         </td>
                         <td style="width: 10%" class="text-center">{{ .Writer }}</td>
                         <td style="width: 20%" class="text-center">{{ .RegisterDate }}</td>
-                        <td style="width: 10%" class="text-center">0</td>
+                        <td style="width: 10%" class="text-center">{{ .Views }}</td>
                     </tr>
                     {{ end }}
                 </tbody>
             </table>
+            {{if .login}}
             <div>
                 <a href="/post/register" class="btn btn-success">글쓰기</a>
             </div>
+            {{ end }}
         </form>
     </div>
 </body>
