--- a/templates/member/login-success.html
+++ b/templates/member/login-success.html
@@ -1,4 +1,4 @@
-{{ define "member/login.html" }}
+{{ define "member/login-success.html" }}
 <!DOCTYPE html>
 <html lang="ko"><head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -26,22 +26,14 @@
 					<div class="panel-heading">
 						<h3 class="mb-5">{{.title}}</h3>
 					</div>
-					<div class="panel-body">
-						<form class="form" id="login-form" action="login" method="POST">
-							<div class="form-group mb-4">
-								<input type="text" class="form-control form-control-lg" id="id" name="id" placeholder="아이디" autofocus>
-							</div>
-							<div class="form-group mb-4">
-								<input type="password" class="form-control form-control-lg" id="password" name="password" placeholder="비밀번호">
-							</div>
-							<div>
-								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
-							</div>
-                            <div class="text-center pt-0 mb-5 pb-0">
-                                <a href="#!">비밀번호를 잊어버리셨나요?</a>
-                            </div>
-						</form>
+					{{if .member}}
+					<div>
+						<p>{{.member.UserId}} 님 환영 합니다!</p>
 					</div>
+					{{end}}
+                    <a href="/">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">홈으로 가기</button>
+					</a>
 				</div>
 			</div>
 		</div>
