--- a/templates/common/404.html
+++ b/templates/common/404.html
@@ -29,6 +29,9 @@
                     <div>
 						<p>오류 메세지 : {{.message}}</p>
 					</div>
+					<a href="/">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">홈으로 가기</button>
+					</a>
 				</div>
 			</div>
 		</div>
