--- a/templates/member/modify.html
+++ b/templates/member/modify.html
@@ -44,10 +44,10 @@
 							<div>
 								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">변경 하기</button>
 							</div>
-                            <div>
-								<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">탈퇴 하기</button>
-							</div>
 						</form>
+						<a href="/member/delete">
+							<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">탈퇴 하기</button>
+						</a>			
 					</div>
 					{{end}}
 				</div>
