--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -27,10 +27,6 @@
 						<h3 class="mb-5">{{.title}}</h3>
 					</div>
 					{{if .member}}
-					<div>
-						<p>{{.member.Username}} 님 환영 합니다!</p>
-					</div>
-					{{else}}
 					<div class="panel-body">
 						<form class="form" id="login-form" action="../modify" method="POST">
                             <input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
@@ -48,10 +44,11 @@
 							</div>
 						</form>
 					</div>
-
-					<div>
+					{{end}}
+					{{ if eq .member.UserId .article.Writer }}
+					<a href="/post/delete">
 						<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">삭제 하기</button>
-					</div>
+					</a>
 					{{end}}
 				</div>
 			</div>
