게시글 삭제 추가

--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -39,17 +39,27 @@
                             <div class="form-group mb-4">
 								<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}">
 							</div>
+							{{ if eq .member.UserId .article.Writer }}
 							<div>
-								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">수정 하기</button>
+								<button class="btn btn-success btn-lg btn-block mb-4" type="submit">수정 하기</button>
 							</div>
+							{{end}}
 						</form>
 					</div>
 					{{end}}
 					{{ if eq .member.UserId .article.Writer }}
-					<a href="/post/delete">
-						<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">삭제 하기</button>
-					</a>
+					<div class="delete-from">
+						<form class="delete" id="delete-form" action="../delete" method="POST">
+							<input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
+							<div>
+								<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">삭제 하기</button>
+							</div>
+						</form>
+					</div>
 					{{end}}
+					<a href="/post/list">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">목록으로</button>
+					</a>
 				</div>
 			</div>
 		</div>
