--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -24,9 +24,10 @@
             <div>
                 <h1>게시판 입니다</h1>
             </div>
-            <table class="table table-hover table-striped">
+            <table class="table table-hover">
                 <thead>
                     <tr>
+                        <th scope="col" class="text-center">번호</th>
                         <th scope="col" class="text-center">제목</th>
                         <th scope="col" class="text-center">글쓴이</th>
                         <th scope="col" class="text-center">작성일</th>
@@ -36,7 +37,8 @@
                 <tbody>
                     {{ range .posts }}
                     <tr>
-                        <td style="width: 60%">
+                        <td style="width: 10%">{{ .Id }}</td>
+                        <td style="width: 50%">
                             <a class="text-reset" href="/post/article/{{ .Id }}">{{ .Title }}</a>
                         </td>
                         <td style="width: 10%" class="text-center">{{ .Writer }}</td>
@@ -56,17 +58,21 @@
 
         <div class="text-center">
             <ul class="pagination justify-content-center">
-                {{if .pages.Prev}}
-                <li class="page-item"><a class="page-link"  href="/post/list/{{ .pages.Start }}">이전</a></li>
-                {{end}}
+                {{ if eq .pages.Prev 0 }}
+                <li class="page-item disabled"><a class="page-link"  href="/post/list/{{ .pages.Prev }}">이전</a></li>
+                {{ else }}
+                <li class="page-item"><a class="page-link"  href="/post/list/{{ .pages.Prev }}">이전</a></li>
+                {{ end }}
 
                 {{ range .pages.Indexes }}
                 <li class="page-item"><a class="page-link"  href="/post/list/{{.}}">{{.}}</a></li>
                 {{ end }}
 
-                {{if .pages.Next}}
-                <li class="page-item"><a class="page-link"  href="/post/list/{{ .page.End }}">다음</a></li>
-                {{end}}
+                {{ if eq .pages.Next 0 }}
+                <li class="page-item disabled"><a class="page-link"  href="/post/list/{{ .page.Next }}">다음</a></li>
+                {{ else }}
+                <li class="page-item"><a class="page-link"  href="/post/list/{{ .page.Next }}">다음</a></li>
+                {{ end }}
             </ul>
         </div>
     </div>
