--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -52,6 +52,7 @@
         <hr />
         {{if .login}}
         <div>
+            <a href="/" class="btn btn-primary">홈으로</a>
             <a href="/post/register" class="btn btn-success">글쓰기</a>
         </div>
         {{ end }}
