--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -30,13 +30,16 @@
 						<form class="form" id="login-form" action="../modify" method="POST">
                             <input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
 							<div class="form-group mb-4">
+								<label for="title" class="col-sm-2 control-label">제목</label>
 								<input type="text" class="form-control form-control-lg" id="title" name="title" value="{{ .article.Title }}" autofocus>
 							</div>
 							<div class="form-group mb-4">
+								<label for="content" class="col-sm-2 control-label">내용</label>
 								<input type="text" class="form-control form-control-lg" id="content" name="content" value="{{ .article.Content }}">
 							</div>
                             <div class="form-group mb-4">
-								<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}">
+								<label for="writer" class="col-sm-2 control-label">작성자</label>
+								<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}" readonly="readonly">
 							</div>
 							{{ if eq .member.UserId .article.Writer }}
 							<div>
