--- a/templates/post/register.html
+++ b/templates/post/register.html
@@ -49,6 +49,11 @@
 					</div>
 					{{end}}
 				</div>
+				<div>
+					<a href="/post/list">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">목록으로</button>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
