게시글 보기 페이지 오류 수정

--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -41,28 +41,30 @@
 								<label for="writer" class="col-sm-2 control-label">작성자</label>
 								<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}" readonly="readonly">
 							</div>
-							{{ if eq .member.UserId .article.Writer }}
+							{{ if not .member }}
+							{{ else if eq .member.UserId .article.Writer }}
 							<div>
 								<button class="btn btn-success btn-lg btn-block mb-4" type="submit">수정 하기</button>
 							</div>
-							{{end}}
+							{{ end }}
 						</form>
 					</div>
-					{{ if eq .member.UserId .article.Writer }}
-					<div class="delete-from">
-						<form class="delete" id="delete-form" action="../delete" method="POST">
-							<input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
-							<div>
-								<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">삭제 하기</button>
-							</div>
-						</form>
-					</div>
-					{{ end }}
-					<div>
-						<a href="/post/list">
-							<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">목록으로</button>
-						</a>
-					</div>
+				</div>
+				{{ if not .member }}
+				{{ else if eq .member.UserId .article.Writer }}
+				<div class="delete-from">
+					<form class="delete" id="delete-form" action="../delete" method="POST">
+						<input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
+						<div>
+							<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">삭제 하기</button>
+						</div>
+					</form>
+				</div>
+				{{ end }}
+				<div>
+					<a href="/post/list">
+						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">목록으로</button>
+					</a>
 				</div>
 			</div>
 		</div>
