--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -44,7 +44,7 @@
 							{{ if not .member }}
 							{{ else if eq .member.UserId .article.Writer }}
 							<div>
-								<button class="btn btn-success btn-lg btn-block mb-4" type="submit">수정 하기</button>
+								<button class="btn btn-warning btn-lg btn-block mb-4" type="submit">수정 하기</button>
 							</div>
 							{{ end }}
 						</form>
