--- a/templates/member/register.html
+++ b/templates/member/register.html
@@ -51,6 +51,11 @@
 						</form>
 					</div>
 					{{end}}
+					<div>
+						<a href="/">
+							<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">홈으로</button>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
