--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -24,6 +24,13 @@
             <div>
                 <h1>게시판 입니다</h1>
             </div>
+            <div>
+                {{ if not .member }}
+                <p>환영 합니다! 로그인 하시면 더 많은 서비스 이용이 가능합니다.</p>
+				{{ else }}
+                <p>{{ .member.UserId }} 님 환영 합니다!</p>
+                {{ end }}
+            </div>
             <table class="table table-hover">
                 <thead>
                     <tr>
