--- a/templates/member/forget.html
+++ b/templates/member/forget.html
@@ -1,4 +1,4 @@
-{{ define "member/login.html" }}
+{{ define "member/forget.html" }}
 <!DOCTYPE html>
 <html lang="ko"><head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -27,25 +27,17 @@
 						<h3 class="mb-5">{{.title}}</h3>
 					</div>
 					<div class="panel-body">
-						<form class="form" id="login-form" action="login" method="POST">
+						<form class="form" id="forget-form" action="forget" method="POST">
 							<div class="form-group mb-4">
 								<input type="text" class="form-control form-control-lg" id="id" name="id" placeholder="아이디" autofocus>
 							</div>
 							<div class="form-group mb-4">
-								<input type="password" class="form-control form-control-lg" id="password" name="password" placeholder="비밀번호">
+								<input type="text" class="form-control form-control-lg" id="name" name="name" placeholder="이름">
 							</div>
 							<div>
-								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
+								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">비밀번호 초기화 하기</button>
 							</div>
 						</form>
-					</div>
-					<div>
-						<a href="/">
-							<button class="btn btn-primary btn-lg btn-block mb-4" type="button">홈으로</button>
-						</a>
-					</div>
-					<div class="text-center pt-0 mb-5 pb-0">
-						<a href="/member/forget">비밀번호를 잊어버리셨나요?</a>
 					</div>
 				</div>
 			</div>
