--- a/templates/member/reset.html
+++ b/templates/member/reset.html
@@ -1,4 +1,4 @@
-{{ define "member/login.html" }}
+{{ define "member/reset.html" }}
 <!DOCTYPE html>
 <html lang="ko"><head>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -27,25 +27,18 @@
 						<h3 class="mb-5">{{.title}}</h3>
 					</div>
 					<div class="panel-body">
-						<form class="form" id="login-form" action="login" method="POST">
+						<form class="form" id="reset-form" action="reset" method="POST">
+                            <input type="hidden" id="id" name="id" value="{{ .userid }}">
 							<div class="form-group mb-4">
-								<input type="text" class="form-control form-control-lg" id="id" name="id" placeholder="아이디" autofocus>
+								<input type="password" class="form-control form-control-lg" id="password1" name="password1" placeholder="비밀번호" autofocus>
 							</div>
 							<div class="form-group mb-4">
-								<input type="password" class="form-control form-control-lg" id="password" name="password" placeholder="비밀번호">
+								<input type="password" class="form-control form-control-lg" id="password2" name="password2" placeholder="비밀번호 재입력">
 							</div>
 							<div>
-								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">로그인</button>
+								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">비밀번호 초기화</button>
 							</div>
 						</form>
-					</div>
-					<div>
-						<a href="/">
-							<button class="btn btn-primary btn-lg btn-block mb-4" type="button">홈으로</button>
-						</a>
-					</div>
-					<div class="text-center pt-0 mb-5 pb-0">
-						<a href="/member/forget">비밀번호를 잊어버리셨나요?</a>
 					</div>
 				</div>
 			</div>
