--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -26,7 +26,7 @@
             </div>
             <div>
                 {{ if not .member }}
-                <p>환영 합니다! 로그인 하시면 더 많은 서비스 이용이 가능합니다.</p>
+                <p>환영 합니다! <a href="/member/login">로그인</a> 하시면 더 많은 서비스 이용이 가능합니다.</p>
 				{{ else }}
                 <p>{{ .member.UserId }} 님 환영 합니다!</p>
                 {{ end }}
