--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -1,75 +1,60 @@
 {{ define "post/article.html" }}
 <!DOCTYPE html>
-<html lang="ko"><head>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/latest/js/bootstrap.min.js"></script>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
-<style>
-    body {
-        background: #f8f8f8;
-        padding: 60px 0;
-    }
-    
-    #login-form > div {
-        margin: 15px 0;
-    }
+<html lang="ko">
 
-</style>
+<head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/latest/js/bootstrap.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		body {
+			background: #f8f8f8;
+			padding: 60px 0;
+		}
+		#login-form>div {
+			margin: 15px 0;
+		}
+	</style>
 </head>
 
 <body>
-<div class="container">
-	<div class="container py-5 h-100">
-		<div class="row d-flex justify-content-center align-items-center h-100">
-			<div class="col-12 col-md-8 col-lg-6 col-xl-5">
-				<div class="panel panel-success">
-					<div class="panel-heading">
-						<h3 class="mb-5">{{.title}}</h3>
-					</div>
-					<div class="panel-body">
-						<form class="form" id="login-form" action="../modify" method="POST">
-                            <input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
-							<div class="form-group mb-4">
-								<label for="title" class="col-sm-2 control-label">제목</label>
-								<input type="text" class="form-control form-control-lg" id="title" name="title" value="{{ .article.Title }}" autofocus>
-							</div>
-							<div class="form-group mb-4">
-								<label for="content" class="col-sm-2 control-label">내용</label>
-								<input type="text" class="form-control form-control-lg" id="content" name="content" value="{{ .article.Content }}">
-							</div>
-                            <div class="form-group mb-4">
-								<label for="writer" class="col-sm-2 control-label">작성자</label>
-								<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}" readonly="readonly">
-							</div>
-							{{ if not .member }}
-							{{ else if eq .member.UserId .article.Writer }}
-							<div>
-								<button class="btn btn-warning btn-lg btn-block mb-4" type="submit">수정 하기</button>
-							</div>
-							{{ end }}
-						</form>
-					</div>
-				</div>
-				{{ if not .member }}
-				{{ else if eq .member.UserId .article.Writer }}
-				<div class="delete-from">
-					<form class="delete" id="delete-form" action="../delete" method="POST">
-						<input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
-						<div>
-							<button class="btn btn-danger btn-lg btn-block mb-4" type="submit">삭제 하기</button>
-						</div>
-					</form>
-				</div>
-				{{ end }}
-				<div>
-					<a href="/post/list">
-						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">목록으로</button>
-					</a>
-				</div>
+	<div class="container">
+		<section id="container">
+			<div class="panel-heading">
+				<h3 class="mb-5">{{.title}}</h3>
 			</div>
-		</div>
+			<div class="panel-body">
+				<form class="form" id="login-form" action="../modify" method="POST">
+					<input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
+					<div class="form-group mb-3">
+						<label for="title" class="control-label">제목</label>
+						<input type="text" class="form-control form-control-lg" id="title" name="title" value="{{ .article.Title }}" autofocus>
+					</div>
+					<div class="form-group mb-3">
+						<label for="content" class="control-label">내용</label>
+						<textarea type="text" class="form-control form-control-lg" id="content" name="content" rows="5">{{ .article.Content }}</textarea>
+					</div>
+					<div class="form-group mb-4">
+						<label for="writer" class="control-label">작성자</label>
+						<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}" readonly="readonly">
+					</div>
+					<div class="mt-3">
+                        {{ if not .member }}
+                        {{ else if eq .member.UserId .article.Writer }}
+						<button class="btn btn-lg btn-warning col-3 mb-4" type="submit">수정 하기</button>
+						<a href="/post/delete/{{ .article.Id }}">
+							<button class="btn btn-danger btn-lg col-3 mb-4" type="button">삭제 하기</button>
+						</a>
+                        {{ end }}
+						<a href="/post/list">
+							<button class="btn btn-primary btn-lg col-3 mb-4" type="button">목록으로</button>
+						</a>
+					</div>
+				</form>
+			</div>
+		</section>
 	</div>
-</div>
 </body>
+
 </html>
 {{ end }}
