--- a/templates/post/register.html
+++ b/templates/post/register.html
@@ -1,63 +1,58 @@
 {{ define "post/register.html" }}
 <!DOCTYPE html>
-<html lang="ko"><head>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/latest/js/bootstrap.min.js"></script>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
-<style>
-    body {
-        background: #f8f8f8;
-        padding: 60px 0;
-    }
-    
-    #login-form > div {
-        margin: 15px 0;
-    }
+<html lang="ko">
 
-</style>
+<head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/latest/js/bootstrap.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		body {
+			background: #f8f8f8;
+			padding: 60px 0;
+		}
+		#login-form>div {
+			margin: 15px 0;
+		}
+	</style>
 </head>
 
 <body>
-<div class="container">
-	<div class="container py-5 h-100">
-		<div class="row d-flex justify-content-center align-items-center h-100">
-			<div class="col-12 col-md-8 col-lg-6 col-xl-5">
-				<div class="panel panel-success">
-					<div class="panel-heading">
-						<h3 class="mb-5">{{.title}}</h3>
-					</div>
-					{{if .member}}
-					<div>
-						<p>{{.member.Username}} 님 환영 합니다!</p>
-					</div>
-					{{else}}
-					<div class="panel-body">
-						<form class="form" id="login-form" action="register" method="POST">
-							<div class="form-group mb-4">
-								<input type="text" class="form-control form-control-lg" id="title" name="title" placeholder="제목" autofocus>
-							</div>
-							<div class="form-group mb-4">
-								<input type="text" class="form-control form-control-lg" id="content" name="content" placeholder="내용">
-							</div>
-                            <div class="form-group mb-4">
-								<input type="text" class="form-control form-control-lg" id="writer" name="writer" placeholder="작성자">
-							</div>
-							<div>
-								<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">글쓰기</button>
-							</div>
-						</form>
-					</div>
-					{{end}}
-				</div>
+	<div class="container">
+		<section id="container">
+			<div class="panel-heading">
+				<h3 class="mb-5">{{.title}}</h3>
+			</div>
+			<div class="panel panel-success">
+				{{if .member}}
 				<div>
-					<a href="/post/list">
-						<button class="btn btn-primary btn-lg btn-block mb-4" type="submit">목록으로</button>
-					</a>
+					<p>{{.member.Username}} 님 환영 합니다!</p>
 				</div>
+				{{else}}
+				<div class="panel-body">
+					<form class="form" id="login-form" action="register" method="POST">
+						<div class="form-group mb-4">
+							<input type="text" class="form-control form-control-lg" id="title" name="title" placeholder="제목" autofocus>
+						</div>
+						<div class="form-group mb-4">
+							<textarea type="text" class="form-control form-control-lg" id="content" name="content" rows="5" placeholder="내용"></textarea>
+						</div>
+						<div class="form-group mb-4">
+							<input type="text" class="form-control form-control-lg" id="writer" name="writer" placeholder="작성자">
+						</div>
+						<div>
+							<button class="btn btn-success btn-lg col-3 mb-4" type="submit">글쓰기</button>
+							<a href="/post/list">
+								<button class="btn btn-primary btn-lg col-3 mb-4" type="button">목록으로</button>
+							</a>
+						</div>
+					</form>
+				</div>
+				{{end}}
 			</div>
 		</div>
 	</div>
-</div>
 </body>
+
 </html>
 {{ end }}
