1. 첨부 파일 추가 기능 추가 2. 철부 파일 삭제 기능 추가 3. 게시글 수정시 첨부파일 수정 기능 추가

--- a/templates/post/modify.html
+++ b/templates/post/modify.html
@@ -24,7 +24,7 @@
 				<h3 class="mb-5">{{.title}}</h3>
 			</div>
 			<div class="panel-body">
-				<form class="form" id="login-form" action="../modify" method="POST">
+				<form class="form" id="login-form" action="../modify" method="POST" enctype="multipart/form-data">
 					<input type="hidden" id="article-id" name="article-id" value="{{ .article.Id }}">
 					<div class="form-group mb-3">
 						<label for="title" class="control-label">제목</label>
@@ -37,6 +37,18 @@
 					<div class="form-group mb-4">
 						<label for="writer" class="control-label">작성자</label>
 						<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}" readonly="readonly">
+					</div>
+					{{ range .attaches }}
+					<div class="form-group mb-4">
+						<label for="attach" class="control-label">첨부파일</label>
+						<a href="/post/article/{{ .ArticleId }}/{{ .FileName }}">{{ .FileName }}</a>
+						<a href="/post/delete/attach/{{ .Id }}">
+							<button class="btn btn-danger" type="button">삭제</button>
+						</a>
+					</div>
+					{{ end }}
+					<div class="form-group mb-4">
+						첨부 파일 : <input type="file" name="file">
 					</div>
 					<div class="mt-3">
 						{{ if not .member }}
