--- a/templates/post/article.html
+++ b/templates/post/article.html
@@ -38,6 +38,12 @@
 						<label for="writer" class="control-label">작성자</label>
 						<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .article.Writer }}" readonly="readonly">
 					</div>
+					{{ range .attaches }}
+					<div class="form-group">
+						<label for="attach" class="control-label">첨부파일</label>
+						<a href="/post/article/{{ .ArticleId }}/{{ .FileName }}">{{ .FileName }}</a>
+					</div>
+					{{ end }}
 					<div class="mt-3">
                         {{ if not .member }}
                         {{ else if eq .member.UserId .article.Writer }}
