--- a/templates/post/register.html
+++ b/templates/post/register.html
@@ -24,13 +24,8 @@
 				<h3 class="mb-5">{{.title}}</h3>
 			</div>
 			<div class="panel panel-success">
-				{{if .member}}
-				<div>
-					<p>{{.member.Username}} 님 환영 합니다!</p>
-				</div>
-				{{else}}
 				<div class="panel-body">
-					<form class="form" id="login-form" action="register" method="POST">
+					<form class="form" id="login-form" action="register" method="POST" enctype="multipart/form-data">
 						<div class="form-group mb-4">
 							<input type="text" class="form-control form-control-lg" id="title" name="title" placeholder="제목" autofocus>
 						</div>
@@ -38,8 +33,11 @@
 							<textarea type="text" class="form-control form-control-lg" id="content" name="content" rows="5" placeholder="내용"></textarea>
 						</div>
 						<div class="form-group mb-4">
-							<input type="text" class="form-control form-control-lg" id="writer" name="writer" placeholder="작성자">
+							<input type="text" class="form-control form-control-lg" id="writer" name="writer" value="{{ .member.UserId }}" readonly="readonly">
 						</div>
+						<div class="form-group mb-4">
+							첨부 파일 : <input type="file" name="file">
+						</div> 
 						<div>
 							<button class="btn btn-success btn-lg col-2 mb-4" type="submit">글쓰기</button>
 							<a href="/post/list">
@@ -48,7 +46,6 @@
 						</div>
 					</form>
 				</div>
-				{{end}}
 			</div>
 		</div>
 	</div>
