--- a/templates/post/list.html
+++ b/templates/post/list.html
@@ -73,14 +73,25 @@
                 <li class="page-item"><a class="page-link"  href="/post/list/{{ .pages.Prev }}">이전</a></li>
                 {{ end }}
 
-                {{ range .pages.Indexes }}
+                {{ range .pages.LIndexes }}
+                <li class="page-item"><a class="page-link"  href="/post/list/{{.}}">{{.}}</a></li>
+                {{ end }}
+
+                <li class="page-item active">
+                    <a class="page-link"  href="/post/list/{{ .pages.Current }}">
+                        {{ .pages.Current }}
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                
+                {{ range .pages.RIndexes }}
                 <li class="page-item"><a class="page-link"  href="/post/list/{{.}}">{{.}}</a></li>
                 {{ end }}
 
                 {{ if eq .pages.Next 0 }}
-                <li class="page-item disabled"><a class="page-link"  href="/post/list/{{ .page.Next }}">다음</a></li>
+                <li class="page-item disabled"><a class="page-link"  href="/post/list/{{ .pages.Next }}">다음</a></li>
                 {{ else }}
-                <li class="page-item"><a class="page-link"  href="/post/list/{{ .page.Next }}">다음</a></li>
+                <li class="page-item"><a class="page-link"  href="/post/list/{{ .pages.Next }}">다음</a></li>
                 {{ end }}
             </ul>
         </div>
